# raylibstarter-minimal-CLtemplate

src/: CMakeLists.txt  main.cpp
src/Aufgabe2-Sprite/: Sprite.cpp  Sprite.h  SpriteHelp.h
src/Aufgabe3-Wuerfel/: DiceGame.cpp  DiceGame.h  DiceSupport.h
src/Aufgabe4-Pflanzen/: Bush.cpp  Bush.h  Flower.cpp  Flower.h  Grass.cpp  Grass.h  Plant.cpp  Plant.h  PlantHandler.cpp  PlantHandler.h  PlantSupport.h  Tree.cpp  Tree.h
src/Aufgabe5-CustomDynamicArray/: CustomDynamicArray.h  CustomDynamicArray.hpp  testmains.cpp  testmains.h
src/Aufgabe6-Auto/: CarHandler.cpp  CarHandler.h  CarSupport.h
src/Aufgabe6-Auto/Bases/: BaseBrakes.cpp  BaseBrakes.h  BaseCar.cpp  BaseCar.h  BaseEngine.cpp  BaseEngine.h  BaseFrame.cpp  BaseFrame.h  BaseGears.cpp  BaseGears.h  BaseSuspension.cpp  BaseSuspension.h  BaseWheels.cpp  BaseWheels.h
src/Aufgabe6-Auto/Cars/Audi/: AudiBrakes.cpp  AudiBrakes.h  AudiCar.cpp  AudiCar.h  AudiEngine.cpp  AudiEngine.h  AudiFrame.cpp  AudiFrame.h  AudiGears.cpp  AudiGears.h  AudiSuspension.cpp  AudiSuspension.h  AudiWheels.cpp  AudiWheels.h
src/Aufgabe6-Auto/Cars/Mercedes/: MercedesBrakes.cpp  MercedesBrakes.h  MercedesCar.cpp  MercedesCar.h  MercedesEngine.cpp  MercedesEngine.h  MercedesFrame.cpp  MercedesFrame.h  MercedesGears.cpp  MercedesGears.h  MercedesSuspension.cpp  MercedesSuspension.h  MercedesWheels.cpp  MercedesWheels.h
src/Aufgabe7-RaylibSpriteKlasse/: AsteroidsSupport.h  PlayerSprite.cpp  PlayerSprite.h  RaylibSprite.cpp  RaylibSprite.h
src/Aufgabe8-LevelKlasse/: AsteroidsHandler.cpp  AsteroidsHandler.h  Level.cpp  Level.h
